  the output of the realign workflow.
- Fixed a bug that did not permit using the '--memory-limit/-M' option for
  the realign workflow.
- Fixed an issue that could cause non-deterministic output in frameshift
  alignment mode.
- Fixed a bug that could cause a crash when using the XML output format in
  the view workflow.
- Added the sensitivity mode `--linclust-20` using 30 seed shapes of weight 12.
- Fixed an issue that could cause non-deterministic output for identically-scoring
  HSPs in the same target.
- Disabled the default use of increased coverage and identity cutoffs in
  earlier clustering rounds.
- Optimized the performance of the extension stage when coverage or approximate
  identity filters are used.
- Optimized the performance of the extension stage when not using output fields
  that require alignment traceback.

[2.1.10]
- Fixed a bug that could cause a crash when using a bi-directional coverage
  cutoff in query-indexed mode.
- Fixed a bug that caused the `--include-lineage` option to malfunction for
  targets with no taxonomic assignment available.

[2.1.9]
- Corrected the prefix of the query length field for the SAM format.
- Added the size modifiers 'T', 'M' and 'K' for the `--memory-limit`/`-M`
  option.
- Added the option `--mutual-cover` to cluster sequences by mutual coverage
  percentage of the cluster representative and member sequence.
- Added the option `--symmetric` for computing greedy vertex cover with
  symmetric edges.
- Fixed an issue that caused the `--approx-id` option and the `approx_pident`
  output field not to work correctly when using the `--anchored-swipe`
  option.
- Added the option `--no-reassign` to prevent reassignment to closest
  representative for the greedy vertex cover and clustering workflows.
- Added the option `--connected-component-depth` to activate clustering
  of connected components at a given maximum depth for the greedy vertex
  cover and the clustering workflows.