@@ -66,6 +66,7 @@ const std::map<Sensitivity, Mode> default_ext_mode = {
 	{ Sensitivity::FAST, Mode::BANDED_FAST},
 	{ Sensitivity::SHAPES30x10, Mode::BANDED_FAST},
 	{ Sensitivity::LINCLUST_20, Mode::BANDED_FAST},
+	{ Sensitivity::LINCLUST_40, Mode::BANDED_FAST},
 	{ Sensitivity::DEFAULT, Mode::BANDED_FAST},
 	{ Sensitivity::MID_SENSITIVE, Mode::BANDED_FAST},
 	{ Sensitivity::SENSITIVE, Mode::BANDED_FAST},
