@@ -56,6 +56,7 @@ const EMap<Sensitivity> EnumTraits<Sensitivity>::to_string = {
 	{ Sensitivity::FASTER, "faster" },
 	{ Sensitivity::FAST, "fast" },
 	{ Sensitivity::DEFAULT, "default" },
+	{ Sensitivity::LINCLUST_40, "linclust-40" },
 	{ Sensitivity::LINCLUST_20, "linclust-20" },
 	{ Sensitivity::MID_SENSITIVE, "mid-sensitive" },
 	{ Sensitivity::SHAPES30x10, "shapes-30x10" },
@@ -71,6 +72,7 @@ const SEMap<Sensitivity> EnumTraits<Sensitivity>::from_string = {
 	{ "default", Sensitivity::DEFAULT },
 	{ "mid-sensitive", Sensitivity::MID_SENSITIVE },
 	{ "shapes-30x10", Sensitivity::SHAPES30x10 },
+	{ "linclust-40", Sensitivity::LINCLUST_40 },
 	{ "linclust-20", Sensitivity::LINCLUST_20 },
 	{ "sensitive", Sensitivity::SENSITIVE },
 	{ "more-sensitive", Sensitivity::MORE_SENSITIVE },
